--- a/css/base.css
+++ b/css/base.css
@@ -4,15 +4,24 @@
 
 *{
     font-family: 'Ubuntu', sans-serif;
+    
+
 }
 
 body{
+    margin: 0 auto;
     text-align: center;
     background-color: rgba(95, 173, 196, 0.616);
 }
 
 main{
+    margin: 0 auto;
+    max-width: 1900px;
+    justify-content: space-evenly;
+    align-items:center;
+    padding: 20px;
     display: flex;
+    flex-wrap: wrap;
     border: 2px solid rgba(95, 173, 196, 0.616);
     border-radius: 50px;
     background-color: whitesmoke;
@@ -22,4 +31,8 @@ main{
 footer{
     margin-top: 50px;
     height: 150px;
+}
+p{
+    font-size: 12px;
+    padding: 0 5px;
 }
